Update Google SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="BHijjBIhnqck7CRijXX4ervgy3ET73lQU92MYiBLMbs" />
+    <link rel="canonical" href="https://chacara-de-eventos-acampamento-batista.vercel.app" />
+    <meta name="description" content="A chácara de eventos Acampamento Batista é ideal para a realização de eventos cristãos como batismo, encontro com Deus, retiros e muito mais.">
+    <meta name = "robots" content="index, follow">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
