Better style in header and footer modified correctly

--- a/index.html
+++ b/index.html
@@ -212,11 +212,10 @@
                         <li>
                             <p>
                                 <img src="imgs/icons/used/phone.png" alt="Ícone de telefone" class="contact-list-icons">
-                                Telefone
+                                Telefone/Whatsapp
                             </p>
                             <ul type="square" class="contact-lists">
-                                <li>(41) 99908-7542</li>
-                                <li>(41) 3276-8928</li>
+                                <li><a href="https://wa.me/41999087542" target="_blank" title="Envie uma mensagem por Whatsapp">(41) 99908-7542</a></li>
                             </ul>
                         </li>
                         <li>
@@ -225,8 +224,8 @@
                                 Email
                             </p>
                             <ul type="square" class="contact-lists">
-                                <li><a href="mailto: ronaldoramosim@gmail.com?subject=Chácara de eventos em Balsa Nova" rel="external" target="_blank" style="color: var(--darkColor);">Corretor</a></li>
-                                <li><a href="mailto: contato@rramosimoveis.com.br?subject=Chácara de eventos em Balsa Nova" rel="external" target="_blank" style="color: var(--darkColor);">Empresa</a></li>
+                                <li><a href="mailto: ronaldoramosim@gmail.com?subject=Chácara de eventos em Balsa Nova" rel="external" target="_blank" title="ronaldoramosim@gmail.com">Corretor</a></li>
+                                <li><a href="mailto: contato@rramosimoveis.com.br?subject=Chácara de eventos em Balsa Nova" rel="external" target="_blank" title="contato@rramosimoveis.com.br">Empresa</a></li>
                             </ul>
                         </li>
                         <li>
@@ -238,7 +237,7 @@
                         </li>
                         <li style="display: flex; align-items: center; gap: 5px;">
                             <img src="imgs/icons/used/web.png" alt="Ícone da web" class="contact-list-icons">
-                            <a href="http://www.rramosimoveis.com.br/imovel/locacao/6441223" rel="external" target="_blank" style="color: var(--darkColor);">Site da imobiliária</a>
+                            <a href="http://www.rramosimoveis.com.br/" rel="external" target="_blank">Site da imobiliária</a>
                         </li>
                     </ul>
                 </div>
